@@ -44,6 +44,7 @@ only = 1
 [Documentation::PodSpelling]
 [Documentation::RequirePackageMatchesPodName]
 [Documentation::RequirePodLinksIncludeText]
+#[Documentation::RequirePodSections]
 [ErrorHandling::RequireCarping]
 [ErrorHandling::RequireCheckingReturnValueOfEval]
 [InputOutput::ProhibitBacktickOperators]
@@ -55,6 +56,7 @@ only = 1
 [InputOutput::ProhibitReadlineInForLoop]
 [InputOutput::ProhibitTwoArgOpen]
 [InputOutput::RequireBracedFileHandleWithPrint]
+#[InputOutput::RequireBriefOpen]
 [InputOutput::RequireCheckedClose]
 [InputOutput::RequireCheckedOpen]
 [InputOutput::RequireCheckedSyscalls]
@@ -68,12 +70,14 @@ exclude_functions = print
 [Modules::ProhibitAutomaticExportation]
 [Modules::ProhibitConditionalUseStatements]
 [Modules::ProhibitEvilModules]
+#[Modules::ProhibitExcessMainComplexity]
 [Modules::ProhibitMultiplePackages]
 [Modules::RequireBarewordIncludes]
 [Modules::RequireEndWithOne]
 [Modules::RequireExplicitPackage]
 [Modules::RequireFilenameMatchesPackage]
 [Modules::RequireNoMatchVarsWithUseEnglish]
+#[Modules::RequireVersionVar]
 [NamingConventions::Capitalization]
 [NamingConventions::ProhibitAmbiguousNames]
 [Objects::ProhibitIndirectSyntax]
@@ -164,7 +168,7 @@ allow = $! $/
 [Freenode::DiscouragedModules]
 [Freenode::DollarAB]
 [Freenode::Each]
-[Freenode::EmptyReturn]
+#[Freenode::EmptyReturn]
 [Freenode::IndirectObjectNotation]
 [Freenode::ModPerl]
 [Freenode::OpenArgs]
