@@ -285,6 +285,7 @@ only = 1
 [Documentation::RequirePackageMatchesPodName]
 [Documentation::RequirePodAtEnd]
 [Documentation::RequirePodLinksIncludeText]
+#[Documentation::RequirePodSections]
 [ErrorHandling::RequireCarping]
 [ErrorHandling::RequireCheckingReturnValueOfEval]
 [InputOutput::ProhibitBacktickOperators]
@@ -296,6 +297,7 @@ only = 1
 [InputOutput::ProhibitReadlineInForLoop]
 [InputOutput::ProhibitTwoArgOpen]
 [InputOutput::RequireBracedFileHandleWithPrint]
+#[InputOutput::RequireBriefOpen]
 [InputOutput::RequireCheckedClose]
 [InputOutput::RequireCheckedOpen]
 [InputOutput::RequireCheckedSyscalls]
@@ -307,12 +309,14 @@ only = 1
 [Modules::ProhibitAutomaticExportation]
 [Modules::ProhibitConditionalUseStatements]
 [Modules::ProhibitEvilModules]
+#[Modules::ProhibitExcessMainComplexity]
 [Modules::ProhibitMultiplePackages]
 [Modules::RequireBarewordIncludes]
 [Modules::RequireEndWithOne]
 [Modules::RequireExplicitPackage]
 [Modules::RequireFilenameMatchesPackage]
 [Modules::RequireNoMatchVarsWithUseEnglish]
+#[Modules::RequireVersionVar]
 [NamingConventions::Capitalization]
 [NamingConventions::ProhibitAmbiguousNames]
 [Objects::ProhibitIndirectSyntax]
@@ -403,6 +407,7 @@ allow = $! $/
 [Freenode::DiscouragedModules]
 [Freenode::DollarAB]
 [Freenode::Each]
+#[Freenode::EmptyReturn]
 [Freenode::IndirectObjectNotation]
 [Freenode::ModPerl]
 [Freenode::OpenArgs]
